samples/_failures_safe/1761636876_781a36_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d0e3486.c: In function ‘main’:
./samples/SAFE/__tmp_4d0e3486.c:164:12: error: missing terminating " character
  164 |     printf("Commands: 0=START, 1=DATA_READY, 2=PROCESS_DONE, 3=WRITE_DONE, 4=ERROR, 5=RESET
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4d0e3486.c:164:5: error: expected expression at end of input
  164 |     printf("Commands: 0=START, 1=DATA_READY, 2=PROCESS_DONE, 3=WRITE_DONE, 4=ERROR, 5=RESET
      |     ^~~~~~
./samples/SAFE/__tmp_4d0e3486.c:164:5: error: expected declaration or statement at end of input
